Linting. Updating image builder roles for pool and adding RHEL 9 support.

--- a/ansible/playbooks/oci-build-installer-image.yaml
+++ b/ansible/playbooks/oci-build-installer-image.yaml
@@ -3,6 +3,8 @@
   hosts: localhost
   roles:
     - role: openshift-image-builder-imi
+      vars:
+        pipeline_mode: true
 
 - name: Find Appropriate Image Builder Host
   become: yes
