--- a/charts/rfe-pipelines/templates/rfe-oci-iso-pipeline.yaml
+++ b/charts/rfe-pipelines/templates/rfe-oci-iso-pipeline.yaml
@@ -51,6 +51,9 @@ spec:
       description: JSON object with list of RHEL Repos
       default: {{ $.Values.pipelines.rhsm_repositories | toJson | b64enc }}
       type: string
+    - name: vmi-pool
+      description: Builder Pool used to Initiate Compose
+      type: string
   results:
     - name: build-commit-id
       description: Commit ID of the Build
@@ -107,6 +110,8 @@ spec:
           value: $(params.additional-content-sources)
         - name: rhsm-repositories
           value: $(params.rhsm-repositories)
+        - name: vmi-pool
+          value: $(params.vmi-pool)
       runAfter:
         - "git-clone-tooling"
         - "git-clone-blueprints"
