--- a/ansible/roles/oci-build-auto-iso/tasks/main.yaml
+++ b/ansible/roles/oci-build-auto-iso/tasks/main.yaml
@@ -197,7 +197,7 @@
 
 - name: Set iso-url Result
   ansible.builtin.copy:
-    content: |
+    content: |-
       {{ ('https://' if httpd_route.resources[0].spec.tls is defined else 'http://') + httpd_route.resources[0].spec.host }}/{{ edge_iso_path | basename }}
     dest: "{{ iso_url_output_file }}"
     mode: "0644"
