Migration of ArgoCD to v1beta1
Signed-off-by: Andrew Block <andy.block@gmail.com>

--- a/charts/operator/templates/operatorgroup.yaml
+++ b/charts/operator/templates/operatorgroup.yaml
@@ -12,6 +12,8 @@ metadata:
     {{- toYaml .Values.operatorgroup.annotations | nindent 4 }}
   {{- end }}
 spec:
+  {{- if not .Values.operatorgroup.allNamespaces }}
   targetNamespaces:
     - {{ template "common.names.namespace" . }}
+  {{- end }}
 {{- end }}
