--- a/charts/argocd/templates/argocd.yaml
+++ b/charts/argocd/templates/argocd.yaml
@@ -1,4 +1,4 @@
-apiVersion: argoproj.io/v1alpha1
+apiVersion: argoproj.io/v1beta1
 kind: ArgoCD
 metadata:
   name: {{ template "common.names.fullname" . }}
@@ -14,17 +14,41 @@ spec:
         memory: 256Mi
   rbac:
     defaultPolicy: {{ .Values.argocd.defaultPolicy }}
-  dex:
-    openShiftOAuth: true
+  sso:
+    provider: dex
+    dex:
+      openShiftOAuth: true
   server:
     route:
       enabled: true
       tls:
         insecureEdgeTerminationPolicy: Redirect
         termination: reencrypt
-  resourceCustomizations: |
-    argoproj.io/Application:
-      health.lua: |
+  resourceHealthChecks:
+    - group: ""
+      kind: PersistentVolumeClaim
+      check: |
+        hs = {}
+        if obj.status ~= nil then
+          if obj.status.phase ~= nil then
+            if obj.status.phase == "Pending" then
+              hs.status = "Healthy"
+              hs.message = obj.status.phase
+              return hs
+            end
+            if obj.status.phase == "Bound" then
+              hs.status = "Healthy"
+              hs.message = obj.status.phase
+              return hs
+            end
+          end
+        end
+        hs.status = "Progressing"
+        hs.message = "Waiting for PVC"
+        return hs
+    - group: argoproj.io
+      kind: Application
+      check: |
         hs = {}
         hs.status = "Progressing"
         hs.message = ""
@@ -35,8 +59,25 @@ spec:
           end
         end
         return hs
-    image.openshift.io/ImageStream:
-      health.lua: |
+    - group: build.openshift.io
+      kind: Build
+      check: |
+        hs = {}
+        if obj.status ~= nil then
+          if obj.status.phase ~= nil then
+            if obj.status.phase == "Complete" then
+              hs.status = "Healthy"
+              hs.message = obj.status.phase
+              return hs
+            end
+          end
+        end
+        hs.status = "Progressing"
+        hs.message = "Waiting for Build to complete"
+        return hs
+    - group: image.openshift.io
+      kind: ImageStream
+      check: |
         hs = {}
         hs.status = "Progressing"
         hs.message = ""
@@ -63,57 +104,9 @@ spec:
           end
         end
         return hs
-    quay.redhat.com/QuayRegistry:
-      ignoreDifferences: |
-        jsonPointers:
-        - /spec/components
-    route.openshift.io/Route:
-      ignoreDifferences: |
-        jsonPointers:
-        - /spec/host
-    apps/Deployment:
-      ignoreDifferences: |
-        jsonPointers:
-        - /spec/template/spec/containers/0/image
-    apps.openshift.io/DeploymentConfig:
-      ignoreDifferences: |
-        jsonPointers:
-        - /spec/template/spec/containers/0/image
-    operators.coreos.com/Subscription:
-      health.lua: |
-        hs = {}
-        if obj.status ~= nil then
-          if obj.status.currentCSV ~= nil and (obj.status.state == "AtLatestKnown" or obj.status.state == "UpgradeAvailable" or obj.status.state == "UpgradePending") then
-            hs.status = "Healthy"
-            hs.message = "Subscription installed"
-            return hs
-          end
-        end
-        hs.status = "Progressing"
-        hs.message = "Waiting for Subscription to complete."
-        return hs
-    PersistentVolumeClaim:
-      health.lua: |
-        hs = {}
-        if obj.status ~= nil then
-          if obj.status.phase ~= nil then
-            if obj.status.phase == "Pending" then
-              hs.status = "Healthy"
-              hs.message = obj.status.phase
-              return hs
-            end
-            if obj.status.phase == "Bound" then
-              hs.status = "Healthy"
-              hs.message = obj.status.phase
-              return hs
-            end
-          end
-        end
-        hs.status = "Progressing"
-        hs.message = "Waiting for PVC"
-        return hs
-    operators.coreos.com/InstallPlan:
-      health.lua: |
+    - group: operators.coreos.com
+      kind: InstallPlan
+      check: |
         hs = {}
         if obj.status ~= nil then
           if obj.status.phase ~= nil then
@@ -127,21 +120,42 @@ spec:
         hs.status = "Progressing"
         hs.message = "Waiting for InstallPlan to complete"
         return hs
-    build.openshift.io/Build:
-      health.lua: |
+    - group: operators.coreos.com
+      kind: Subscription
+      check: |
         hs = {}
         if obj.status ~= nil then
-          if obj.status.phase ~= nil then
-            if obj.status.phase == "Complete" then
-              hs.status = "Healthy"
-              hs.message = obj.status.phase
-              return hs
-            end
+          if obj.status.currentCSV ~= nil and (obj.status.state == "AtLatestKnown" or obj.status.state == "UpgradeAvailable" or obj.status.state == "UpgradePending") then
+            hs.status = "Healthy"
+            hs.message = "Subscription installed"
+            return hs
           end
         end
         hs.status = "Progressing"
-        hs.message = "Waiting for Build to complete"
+        hs.message = "Waiting for Subscription to complete."
         return hs
+  resourceIgnoreDifferences:
+    resourceIdentifiers:
+      - group: apps
+        kind: Deployment
+        customization:
+          jsonPointers:
+            - /spec/template/spec/containers/0/image
+      - group: apps.openshift.io
+        kind: DeploymentConfig
+        customization:
+          jsonPointers:
+            - /spec/template/spec/containers/0/image
+      - group: quay.redhat.com
+        kind: QuayRegistry
+        customization:
+          jsonPointers:
+            - /spec/components
+      - group: route.openshift.io
+        kind: Route
+        customization:
+          jsonPointers:
+            - /spec/host
   resourceExclusions: |
     - apiGroups:
       - tekton.dev
